Refine animations, fix z-index nav bug

--- a/css/layout/_header.scss
+++ b/css/layout/_header.scss
@@ -25,6 +25,7 @@
     transform: translateX(100%);
     width: 100%;
     height: 100vh;
+    z-index: 50;
     background-color: white;
 
     display: flex;
